white space wrap added to avoid overflow of text

--- a/webapp/app/css/logviewer.css
+++ b/webapp/app/css/logviewer.css
@@ -78,6 +78,7 @@ body {
     -ms-user-select: text;
     -o-user-select: text;
     user-select: text;
+    white-space: normal;
 }
 
 .logviewer-step.selected {
